@@ -207,12 +207,8 @@ function rcube_mail_ui()
     })
     .contents().mouseup(body_mouseup);
 
-    $(window).resize(function(e) {
-      // check target due to bugs in jquery
-      // http://bugs.jqueryui.com/ticket/7514
-      // http://bugs.jquery.com/ticket/9841
-      if (e.target == window) resize();
-    });
+    // don't use $(window).resize() due to some unwanted side-effects
+    window.onresize = resize;
   }
 
   /**
