@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix window.resize handler on IE8 and Opera (#1488453)
 - Don't let error message popups cover the login form (#1488500)
 - Display Tiff as Jpeg in browsers without Tiff support (#1488452)
 - Don't display Pdf/Tiff/Flash attachments inline without browser support (#1488452, #1487929)
